--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <html>
  <body>
   <script>
-    $(function() {
-    if ('app' !== $('body').attr('id')){
-        window.setTimeout(function(){
-            window.top.location.href = 'https://hunar-95d9c.web.app/index.html'; 
-        }, 5000);
-    }
-});
+   
+  location.replace("https://hunar-95d9c.web.app/index.html")
+   
   </script>
  </body>
 </html>
